RESOLVED FIXED149959
[iOS WK2] Fix assertion in ViewportConfiguration::setDefaultConfiguration seen in testing
https://bugs.webkit.org/show_bug.cgi?id=149959
Summary [iOS WK2] Fix assertion in ViewportConfiguration::setDefaultConfiguration see...
Simon Fraser (smfr)
Reported 2015-10-09 10:42:07 PDT
[iOS WK2] Fix assertion in ViewportConfiguration::setDefaultConfiguration seen in testing
Attachments
Patch (2.10 KB, patch)
2015-10-09 10:45 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2015-10-09 10:45:40 PDT
WebKit Commit Bot
Comment 2 2015-10-09 11:37:22 PDT
Comment on attachment 262778 [details] Patch Clearing flags on attachment: 262778 Committed r190810: <http://trac.webkit.org/changeset/190810>
WebKit Commit Bot
Comment 3 2015-10-09 11:37:26 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.