[iOS WK2] Fix assertion in ViewportConfiguration::setDefaultConfiguration seen in testing https://bugs.webkit.org/show_bug.cgi?id=149959

Reviewed by Tim Horton.

When loading tests which set a flexible viewport, ViewportConfiguration::setDefaultConfiguration()
is called first with testingParameters() and then with webpageParameters(). This
would trigger the assertion that m_defaultConfiguration.initialScaleIsSet but
the new initial scale is zero.

The assertion seems wrong anyway; it's consulting m_defaultConfiguration.initialScaleIsSet
but defaultConfiguration.initialScale, so fix it to test defaultConfiguration.initialScaleIsSet.

* page/ViewportConfiguration.cpp:
(WebCore::ViewportConfiguration::setDefaultConfiguration):


Canonical link: https://commits.webkit.org/168111@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@190810 268f45cc-cd09-0410-ab3c-d52691b4dbfc